<resources>
    <string name="app_name">Healthy Wealthy</string>
    <string name="select_gender">Select gender</string>
    <string name="male">Male</string>
    <string name="bmi_bmr_calculator">BMI/BMR Calculator</string>
    <string name="enter_height">Enter Height</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="enter_age">Enter Age</string>
    <string name="todo">TODO</string>
    <string name="female">Female</string>
    <string name="result">Result</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="calculate_bmr">Calculate BMR</string>
    <string name="calculate">Calculate</string>
    <string name="bmi_bmr_text">Health Care Calculator</string>
    <string name="hint">hint</string>
    <string name="weight">Weight = </string>
    <string name="weightResult"> </string>
    <string name="height">Height = </string>
    <string name="heightResult"> </string>
</resources>